Fix item alignment

--- a/webapp/app/components/collapsible-sidebar/component.scss
+++ b/webapp/app/components/collapsible-sidebar/component.scss
@@ -13,7 +13,7 @@
             height: 100vh;
         }
         .outlet {
-            flex: 1 1;
+            width: 100%;
         }
     }
 }
